--- a/src/index.css
+++ b/src/index.css
@@ -46,7 +46,7 @@ button {
   width: 200px;  
   border-radius: 8px;
   border: 1px solid transparent;
-  padding: 0.6em 1.2em;
+  padding: 10px 20px;
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
