--- a/src/pages/login/Login.css
+++ b/src/pages/login/Login.css
@@ -1,3 +1,22 @@
+.container-login {
+    display: flex;
+    flex-direction: column;
+    align-items: center;      
+    justify-content: center;  
+    height: 100vh;
+    width: 100vw;             
+    text-align: center;     
+    padding: 20px;
+    box-sizing: border-box;
+    margin: 0;       
+}
+
+.loading-text {
+    font-size: medium;
+    color: #666;
+    text-align: center;
+}
+
 .title-login {
     font-size: 3em;
     font-weight: bold;
@@ -8,20 +27,5 @@
 .intro-text {
     font-size: 1.2em;
     margin-bottom: 20px;
-    color: #ddd;
-}
-
-.button-login {
-    width: 200px; 
-    padding: 10px 20px;
-    font-size: 16px;
-    background-color: #4CAF50;
-    color: white;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-}
-
-.button-login:hover {
-    background-color: #45a049;
+    color: #ddd; 
 }
