--- a/src/pages/login/Login.css
+++ b/src/pages/login/Login.css
@@ -24,6 +24,13 @@
     color: #fff; 
 }
 
+.subtitle-login {
+    font-size: 1.5em;
+    font-weight: normal;
+    margin-bottom: 20px;
+    color: #ccc;
+}
+
 .intro-text {
     font-size: 1.2em;
     margin-bottom: 20px;
