--- a/src/pages/login/Login.css
+++ b/src/pages/login/Login.css
@@ -20,15 +20,13 @@
 .title-login {
     font-size: 3em;
     font-weight: bold;
-    margin-bottom: 5px; 
-    color: #fff;
+    margin-bottom: 0;
 }
 
 .subtitle-login {
     font-size: 1.5em;
-    font-weight: normal;
-    margin-bottom: 15px;
-    color: #ccc;
+    margin-top: 5px; 
+    margin-bottom: 20px;
 }
 
 .intro-text {
