--- a/src/pages/login/Login.css
+++ b/src/pages/login/Login.css
@@ -31,6 +31,8 @@
 
 .intro-text {
     font-size: 1.1em;
-    margin-bottom: 25px;
+    margin-top: 5px; 
+    margin-bottom: 15px;
     color: #ddd; 
 }
+
