--- a/src/index.css
+++ b/src/index.css
@@ -6,35 +6,39 @@
   color: rgba(255, 255, 255, 0.87);
   background-color: #242424;
 
+
   width: 100%;
   height: 100%;
   margin: 0;
   padding: 0;
-  overflow: hidden;
-  position: fixed;
   user-select: none;
-  
+
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
 body {
   margin: 0;
-  display: flex;
-  place-items: center;
   min-width: 320px;
   min-height: 100vh;
+  display: flex;
+  flex-direction: column; 
+  overflow: hidden; 
+}
+
+.container {
+  flex-grow: 1;
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+}
+
+canvas {
+  width: 100% !important; 
+  height: 100% !important; 
+  display: block; 
 }
 
 h1 {
