--- a/src/pages/login/Login.css
+++ b/src/pages/login/Login.css
@@ -11,11 +11,17 @@
     margin: 0;       
 }
 
-.loading-text {
+.loading-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh; 
+  }
+  
+  .loading-text {
     font-size: medium;
     color: #666;
-    text-align: center;
-}
+  }
 
 .title-login {
     font-size: 3em;
