--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -73,9 +73,17 @@ nav ul li a:hover {
   align-items: center;
 }
 
-.logout {
+.auth-icon {
   width: 35px;
-  height: auto; 
+  height: auto;
   margin-left: 20px;
   margin-top: 5px;
+  cursor: pointer;
+}
+
+.logout,
+.login {
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
