fix logout button

--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -46,6 +46,10 @@ nav ul li a:hover {
   text-decoration: underline;
 }
 
+nav ul li a:active {
+  color: #b3b3b3;
+}
+
 .button-link {
   display: inline-block;
   padding: 10px 20px;
@@ -59,6 +63,11 @@ nav ul li a:hover {
 
 .button-link:hover {
   background-color: #083818f4;
+  text-decoration: none;
+}
+
+.button-link:active {
+  background-color: #0d502a; 
 }
 
 .button-link:focus,
@@ -73,17 +82,29 @@ nav ul li a:hover {
   align-items: center;
 }
 
-.auth-icon {
-  width: 35px;
+.button-logout {
+  background: none; 
+  border: none; 
+  padding: 0;
+  display: inline-flex;
+  width: auto;
   height: auto;
-  margin-left: 20px;
-  margin-top: 5px;
-  cursor: pointer;
 }
 
-.logout,
+.button-logout:focus,
+.button-logout:active {
+  outline: none;
+}
+
+.logout {
+  width: 35px;
+  height: auto; 
+  margin-left: 10px;
+}
+
 .login {
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  width: 35px;
+  height: auto; 
+  margin-left: 20px;
+  margin-top: 5px;
 }
