--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -39,6 +39,7 @@ nav ul li a {
   font-size: large;
   margin-right: 20px;
   font-weight: bold;
+  transition: color 0.2s ease;
 }
 
 nav ul li a:hover {
@@ -105,6 +106,6 @@ nav ul li a:active {
 .login {
   width: 35px;
   height: auto; 
-  margin-left: 20px;
+  margin-left: 10px;
   margin-top: 5px;
 }
