fix loading text in login

--- a/src/pages/login/Login.css
+++ b/src/pages/login/Login.css
@@ -11,9 +11,16 @@
     margin: 0;       
 }
 
+.loading-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+  }
+
 .loading-text {
     font-size: medium;
-    color: #666;
+    color: #9d9d9d;
     text-align: center;
 }
 
