--- a/src/pages/login/Login.css
+++ b/src/pages/login/Login.css
@@ -14,7 +14,8 @@
 .loading-container {
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: flex-start;
+    padding-top: 100px;
     height: 100vh;
   }
 
